Build scripts and minor change to web/index.html to not us parent folder.

--- a/web/index.html
+++ b/web/index.html
@@ -139,9 +139,9 @@
       </form>
     </div>
   </div>
-  <script src="../shared/pdf.js"></script>
-  <script src="../shared/pdf_viewer.js"></script>
-  <script src="../__build__/index.js"></script>
+  <script src="shared/pdf.js"></script>
+  <script src="shared/pdf_viewer.js"></script>
+  <script src="__build__/index.js"></script>
 </body>
 </html>
 
