--- a/web/index.html
+++ b/web/index.html
@@ -131,7 +131,7 @@
 
     <a href="javascript://" class="clear" title="Clear">×</a>
   </div>
-  <div id="content-wrapper">
+  <div id="content-wrapper" style="overflow: hidden">
     <div id="viewer" class="pdfViewer"></div>
   </div>
   <div id="comment-wrapper">
