Lint and cleanup entire project using eslint

--- a/web/index.html
+++ b/web/index.html
@@ -130,7 +130,7 @@
 
     <div class="spacer"></div>
 
-    <a href="javascript://" class="clear" title="Clear">×</a>
+    <a href="javascript://" class="clear" title="Clear Annotations">×</a>
   </div>
   <div id="content-wrapper">
     <div id="viewer" class="pdfViewer"></div>
